--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,28 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="container">
+      <div class="header">
+        <img src="/images/web-globo.png" alt="<%= title %>" class="icon"/>
+        <h1>
+          <%= title %>
+        </h1>
+        <p>Seu novo encurtador de URL!</p>
+    </div>
+
+    <div>
+      <div class="content">
+        <form method="POST" action="/new">
+          <div class="mb-3 input-group">
+            <input placeholder="Digite a URL a ser encurtada" name="url" class="form-control"/>
+            <div class="input-group-append">
+              <button class="btn btn-primary" type="submit">Encurtar</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
